Kolejna wersja ze zmiennym menu w zależności od uprawnień.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,12 @@ spring.datasource.password    = blogdb
 spring.jpa.show-sql           = true
 spring.jpa.database-platform  = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto = update
+# ===============================
+# SMTP EMAIL
+# ===============================
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=blog.klaudiusz@gmail.com
+spring.mail.password=klaudi11
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
